00-usage/templates/20-deployment-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: main
  name: main
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - image: nginx:1.14
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          name: main
