00-usage/templates/30-service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: main
